fix: z-index on medals when modal is open

--- a/static/style.less
+++ b/static/style.less
@@ -52,6 +52,10 @@
             font-size: calc(var(--xl-size) / 2);
         }
     }
+
+    &.modal-unfocused {
+        z-index: auto !important;
+    }
 }
 
 .page-user-medals {
